ldap/3.6/modules/ROOT/pages/ldap-connector-use-studio.adoc
= Using Studio to Configure LDAP Connector 3.6 - Mule 4

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.

When you run the connector, you can view the app log to check for problems in real time, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:ldap-connector-reference.adoc[LDAP Connector Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Anypoint Connector for Lightweight Directory Access Protocol Connector (LDAP Connector) to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Dependencies to Project*, type `ldap` in the search field.
. Click *LDAP Connector* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-source]]
== Configure a Source

A source initiates a flow when a specified condition is met. You can configure one of these sources to use with LDAP Connector:

* On Modified Objects
+
Initiates a flow when an LDAP data object is modified
+
* On New Objects
+
Initiates a flow when a new LDAP data object is created
+
* HTTP Listener
+
Initiates a flow each time it receives a request on the configured host and port
+
* Scheduler
+
Initiates a flow when a time-based condition is met

For example, to configure an *On Modified Objects* source, follow these steps:

. In the *Mule Palette* view, select *On Modified objects*.
. Drag *On Modified Objects* to the Studio canvas.
. If you want to customize the display name, change the value of the *Display Name* field.
. In the *Connector configuration* field, either select an existing global element or click the plus sign (*+*) to configure a new global element.
. On the *General* tab, specify the principal distinguished name (DN) for the connection, the authentication mechanism, and the configuration URL.
. On the *Advanced* tab, specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. In the *On Modified Objects* configuration screen, specify a value for the *Base DN* field.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you are specifying an action for that connector to perform.

To add an operation for LDAP Connector, follow these steps:

. In the *Mule Palette* view, select *LDAP* and then select the desired operation.
. Drag the operation onto the Studio canvas, next to the input source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials that the connector requires to access the target LDAP system.

To configure the global element for LDAP Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the *General* configuration screen for the operation, click *+* to access the global element configuration fields.
. In the *General* tab, in *Connection*, select the connection type and then complete the associated
connection fields.
+
For information about configuring the SSL and TLS connection types, see <<ssl-connection-type,Configure an SSL Connection Type>> and <<tls-connection-type,Configure a TLS Connection Type>>.
+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
+
. In the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[ssl-connection-type]]
=== Configure an SSL Connection Type

To configure an SSL connection type, use Anypoint Studio to set up an SSL connection in the LDAP global element:

. In the *Connection* field of the global element, select `SSL Configuration`.
. Complete the required fields.

Connect to SSL using port 636.

When you set up an SSL connection type, you can set up one custom truststore. To support this scenario, the connector overrides the JVM default truststore path, which can affect other processes that depend on that truststore.

[[tls-connection-type]]
=== Configure a TLS Connection Type

To configure a TLS connection type, use Studio to set up a TLS connection in the LDAP global element:

. In the *Connection* field of the global element, select `TLS Configuration`.
. Select the *Advanced* Tab.
. In the *Extended configurations* field, select *Edit inline* and then add the `org.mule.module.ldap.trustStorePath` and `org.mule.module.ldap.trustStorePassword` key values.
. Ensure that the native LDAP pooling functionality is turned off. For example if using JNDI, do not use attributes such as `com.sun.jndi.ldap.connect.pool=true`, which causes problems when using TLS.

Connect to TLS using port 389, using `ldap` instead of `ldaps` in the associated URL.

For an example of configuring a TLS connection, see xref:ldap-connector-examples.adoc#set-up-common-truststore[Set Up a Common Truststore].

[[configure-other-fields]]
== Configure Additional Connector Fields

After you configure a global element for LDAP Connector, configure the other required fields for the connector. The required fields vary depending on which connector operation you use.

[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the app log output goes to the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log output goes to your operating system console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also access the app log in the default location `MULE_HOME/logs/<app-name>.log`. You can configure the location of the log path in the app log file `log4j2.xml`.

== Next Step

After configuring Studio, you can try using the xref:ldap-connector-examples.adoc[LDAP Connector Examples].

== See Also

* xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]
* xref:ldap-connector-reference.adoc[LDAP Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
